--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "socket.io": "^4.7.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
