Add @sendgrid/mail for email notification support

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^16.3.1",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "@sendgrid/mail": "^8.0.0"  // <-- Added for email notification support
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
