--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1",
     "winston": "^3.10.0",
-    "@sendgrid/mail": "^8.0.0"
+    "@sendgrid/mail": "^8.0.0",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
